1995-09-05  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c: tweaked interaction between '&' and all_show

	* src/ftree.c: use MODULE_ID

1995-09-04  Thomas E. Dickey  <dickey@clark.net>

	* user/ded.man: updated

	* src/version.h:
	changes to support autoconf, /etc/DIR_COLOR.  Added "-b" and "-e" options
	(temporary!), and extended &-toggle to all dot-files.  Some bug-fixes for
	ring-maintainence.  Modified viewport handling to make toggling between
	lists more stable.  In td_lib, added module to support CmVision, and
	environment variables $DED_TREE, $DED_CM_LOOKUP.  Also in td_lib, mods
	for resizing support with ncurses, and using btree to speedup uid2s, gid2s.

	* src/README: did some.

	* src/showpath.c: bsd4.4 curses mods

	* src/showpath.c: use MODULE_ID

1995-09-03  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c:
	oops: I _don't_ want to copy base_of/item_of in ring_copy!

	* src/dedring.c: use MODULE_ID

	* src/dedview.c:
	mods to keep the base_file value stable when switching viewports (to
	make it easier to toggle between similar directories), and to keep
	the curfile value for different viewports of the same list distinct.

	* src/dedview.c: use MODULE_ID

	* src/dedring.c: save base_of, item_of data

	* src/ded.h:
	added viewport stuff for keeping base_file/curfile more stable when
	switching viewports

	* src/dedscan.c:
	moved warning message into path_RESOLVE, since it's argument is freed
	there

	* src/dedscan.c: use MODULE_ID

	* src/deddoit.c: use MAXPATHLEN instead of BUFSIZ

	* src/deddoit.c: use MODULE_ID

	* src/dedring.c: put ifdef's inside debug-log defs for readability

	* src/ded.c: use MAXPATHLEN instead of BUFSIZ
	added flag 'first_scan'

	* src/ded.c: use MODULE_ID

	* src/dedscan.c:
	mods to avoid a hole that results when path_RESOLVE is called while
	processing 'R' command in a directory that's been removed (the parent
	directory was already in the ring, and this caused the ring to get
	a duplicate entry)
