@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19950905
+MANIFEST for ded, version t19951021
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
